exports[`test Click on Story to showTasksForStoryId 1`] = `
<ListItem
  autoGenerateNestedIndicator={true}
  disableKeyboardFocus={false}
  disabled={false}
  initiallyOpen={false}
  insetChildren={false}
  leftIcon={
    <ActionLabelOutline
      onClick={[Function]} />
  }
  nestedItems={Array []}
  nestedLevel={0}
  onClick={[Function]}
  onKeyboardFocus={[Function]}
  onMouseEnter={[Function]}
  onMouseLeave={[Function]}
  onNestedListToggle={[Function]}
  onTouchStart={[Function]}
  open={null}
  primaryText="test"
  primaryTogglesNestedList={false}
  rightIconButton={
    <IconButton
      disableTouchRipple={false}
      disabled={false}
      iconStyle={Object {}}
      onClick={[Function]}
      tooltip="Show story"
      tooltipPosition="bottom-center"
      touch={false}>
      <NavigationMoreVert
        color="#bdbdbd" />
    </IconButton>
  }
  secondaryTextLines={1} />
`;

exports[`test Click on Story to showTasksForStoryId 2`] = `
<ListItem
  autoGenerateNestedIndicator={true}
  disableKeyboardFocus={false}
  disabled={false}
  initiallyOpen={false}
  insetChildren={false}
  leftIcon={
    <ActionLabelOutline
      onClick={[Function]} />
  }
  nestedItems={Array []}
  nestedLevel={0}
  onClick={[Function]}
  onKeyboardFocus={[Function]}
  onMouseEnter={[Function]}
  onMouseLeave={[Function]}
  onNestedListToggle={[Function]}
  onTouchStart={[Function]}
  open={null}
  primaryText="test2"
  primaryTogglesNestedList={false}
  rightIconButton={
    <IconButton
      disableTouchRipple={false}
      disabled={false}
      iconStyle={Object {}}
      onClick={[Function]}
      tooltip="Show story"
      tooltipPosition="bottom-center"
      touch={false}>
      <NavigationMoreVert
        color="#bdbdbd" />
    </IconButton>
  }
  secondaryTextLines={1} />
`;

exports[`test Render Html with Name 1`] = `
<ListItem
  autoGenerateNestedIndicator={true}
  disableKeyboardFocus={false}
  disabled={false}
  initiallyOpen={false}
  insetChildren={false}
  leftIcon={
    <ActionLabelOutline
      onClick={[Function]} />
  }
  nestedItems={Array []}
  nestedLevel={0}
  onClick={[Function]}
  onKeyboardFocus={[Function]}
  onMouseEnter={[Function]}
  onMouseLeave={[Function]}
  onNestedListToggle={[Function]}
  onTouchStart={[Function]}
  open={null}
  primaryText="test"
  primaryTogglesNestedList={false}
  rightIconButton={
    <IconButton
      disableTouchRipple={false}
      disabled={false}
      iconStyle={Object {}}
      onClick={[Function]}
      tooltip="Show story"
      tooltipPosition="bottom-center"
      touch={false}>
      <NavigationMoreVert
        color="#bdbdbd" />
    </IconButton>
  }
  secondaryTextLines={1} />
`;
